2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>

	* configure.in: Added "te" to ALL_LINGUAS

2005-07-29  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in: Bump version number
	
	*****Release 2.3.6.1***** includes fix for
	#311731 - (Removing folders from an IMAP) 
	

2005-07-26  Harish Krishnaswamy  <kharish@novell.com>

	* plugins/calendar-weather/Makefile.am:
	* plugins/groupwise-features/Makefile.am:
	* plugins/mail-account-disable/Makefile.am:
	* plugins/mailing-list-actions/Makefile.am:
	* plugins/print-message/Makefile.am: Fix make distcheck issues.

	* configure.in: Bump version number
	***** Release 2.3.6 *****

2005-07-20  Tor Lillqvist  <tml@novell.com>

	* configure.in: Add AC_LIBTOOL_WIN32_DLL. It is apparently
	required when using bleeding edge libtool.

	Enable building with Mozilla nspr and nss on Win32. No -ldl on
	Win32. No import library for softokn3.dll provided by the Mozilla
	people for some reason.

	Add libedataserverui, libglade and gtk+ to the dependencies of
	CERT_UI, as the libraries in smime call functions from them.

2005-07-19  Sankar P  <psankar@novell.com>

	* configure.in : Removed the proxy and proxy-login plugins as they are 
	merged into the groupwise-features plugin.
	
2005-07-13  Tor Lillqvist  <tml@novell.com>

	* configure.in: Add libedataserverui to the IMPORTERS dependency
	list.

2005-07-13  Harish Krishnaswamy <kharish@novell.com>
	
	*configure.in : bump version
	***** Release 2.3.5.1 *****

2005-07-13  Tor Lillqvist  <tml@novell.com>

	* configure.in: Don't attempt to build the sa-junk-plugin on
	Win32, it's very Unix-specific.

	* win32/libevolution-mail.def: Add more entries.

2005-07-12  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in: bump version
	***** Release 2.3.5 *****

2005-07-12  Harish Krishnaswamy  <kharish@novell.com>

	* plugins/Makefile.am : Remove groupwise-features
	plugin as it is already listed as a base plugin

2005-07-12  Chenthill Palanisamy  <pchenthill@novell.com>
