@@ -1,3 +1,8 @@
+2005-08-07  Rodney Dawes  <dobey@novell.com>
+
+	* help/C/evolution.xml: Change references to the term "vfolder" to
+	use the term "Search Folder" instead
+
 2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
 
 	* configure.in: Added "te" to ALL_LINGUAS
